--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,16 @@
             "email": "stof@notk.org"
         }
     ],
+	"repositories": [
+		{
+			"type": "vcs",
+			"url": "https://github.com/IWAtech/DoctrineExtensions"
+		}
+	],
     "require": {
         "php": ">=5.3.2",
         "symfony/framework-bundle": "~2.1|~3.0",
-        "gedmo/doctrine-extensions": "2.4.*"
+        "gedmo/doctrine-extensions": "dev-master"
     },
     "suggest": {
         "doctrine/doctrine-bundle": "to use the ORM extensions",
