--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     "require": {
         "php": ">=5.3.2",
         "symfony/framework-bundle": "~2.1|~3.0",
-        "gedmo/doctrine-extensions": "~2.4"
+        "gedmo/doctrine-extensions": "dev-feature/odm-embedded-document-support"
     },
     "suggest": {
         "doctrine/doctrine-bundle": "to use the ORM extensions",
